@@ -12,6 +12,7 @@ Griffith ChangeLog
 	* Mail content can be translated again (gettext issue fixed)
 	* [#269865] Don't change movie plugin selection after adding a movie
 	* Rollback all pending operations before creating new database
+	* Poster window (if visible) is updated along with current movie change
 
 2009-07-03  Michael Jahn
 	* updated IMDb plugin
